tests/neg/effects-match-1.scala
class Foo {
  Effect.canThrowNPE match {
    case _: Pure => () // error
  }
}
